<?xml version="1.0"?>
<package format="2">
  <name>gazebo_mimic_joint_plugin</name>
  <version>0.0.0</version>
  <description>The gazebo_mimic_joint_plugin package</description>

  <maintainer email="byeongkyu@gmail.com">Byeong-Kyu Ahn</maintainer>
  <author email="byeongkyu@gmail.com">Byeong-Kyu Ahn</author>
  <url type="respository">https://github.com/byeongkyu/gazebo_mimic_plugin.git</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>control_toolbox</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
